<resources>
    <string name="app_name">myPoli</string>
    <string name="title_fragment_inbox">Inbox</string>
    <string name="title_edit_quest">Edit quest</string>
    <string name="quest_deleted">Quest deleted</string>
    <string name="repeating_quest_deleted">Repeating Quest deleted</string>
    <string name="quest_complete">Quest complete</string>
    <string name="quest_complete_with_reward">Quest complete! +%1$d XP +%2$d coins.</string>
    <string name="achievement_with_reward">%1$s +%2$d XP +%3$d coins.</string>
    <string name="challenge_complete">Challenge %s complete</string>
    <string name="quest_undone">Quest undone. -%1$d XP -%2$d coins.</string>
    <string name="quest_undone_to_inbox">Quest moved to Inbox. -%1$d XP -%2$d coins.</string>
    <string name="today">Today</string>
    <string name="any_other_day">Any other day</string>
    <string name="add_quest_name_hint">Name (e.g. Read a book)</string>
    <string name="start">Start</string>
    <string name="edit">Edit</string>
    <string name="stop">Stop</string>
    <string name="quest_item_full_duration">%1$dh %2$dm</string>
    <string name="quest_item_minutes_duration">%d min</string>
    <string name="quest_item_hours_duration">%dh</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancel">Cancel</string>
    <string name="title_fragment_wizard_quest_name">New Quest</string>
    <string name="unknown_choice">Don\'t know</string>
    <string name="delete">Delete</string>
    <string name="delete_it">DELETE IT</string>
    <string name="dialog_delete_quest_title">Delete quest</string>
    <string name="dialog_delete_quest_message">Sure you want to delete this awesome quest?</string>
    <string name="dialog_delete_challenge_title">Delete challenge</string>
    <string name="dialog_delete_challenge_message">Would you like to remove all quests for the challenge as well?</string>
    <string name="inbox">Inbox</string>
    <string name="send_feedback">Feedback</string>
    <string name="suggest_ideas">Suggest ideas</string>
    <string name="contact_us">Contact Us</string>
    <string name="yesterday_calendar_format">\'Yesterday - \'d MMM</string>
    <string name="today_calendar_format">\'Today - \'EEE, d MMM</string>
    <string name="tomorrow_calendar_format">\'Tomorrow - \'d MMM</string>
    <string name="calendar_format">MMM d YY</string>
    <string name="agenda_calendar_format">EEEE, d MMM</string>
    <string name="widget_agenda_title_format">EEE, d MMM</string>
    <string name="quest_scheduled_for_today">Quest scheduled for today</string>
    <string name="quest_moved_to_bucket_list">Moved to Bucket List</string>
    <string name="quest_scheduled_for_tomorrow">Quest scheduled for tomorrow</string>
    <string name="contact_us_email_chooser_title">Contact us</string>
    <string name="repeating_quest_saved">Repeating Quest saved</string>
    <string-array name="growth_intervals">
        <item>This week</item>
        <item>This month</item>
        <item>Last 7 days</item>
        <item>Last 4 weeks</item>
        <item>Last 3 months</item>
    </string-array>
    <string name="title_activity_main">myPoli</string>
    <string name="save">SAVE</string>
    <string name="title_fragment_repeating_quests">Repeating Quests</string>
    <string name="share">Share</string>
    <string name="share_app">Share myPoli</string>
    <string name="cannot_edit_completed_quests">Completed quests cannot be edited</string>
    <string name="fragment_overview_title">Your Journey Ahead</string>
    <string name="widget_journey_name">Daily Journey</string>
    <string name="add">ADD</string>
    <string name="rate_dialog_initial_title">Hey Hero</string>
    <string name="rate_dialog_initial_message">Do you love myPoli?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="rate_dialog_never_ask_again">Never ask again</string>
    <string name="rate_dialog_rate_title">Me too!</string>
    <string name="rate_dialog_rate_message">It would be really helpful if you rate myPoli on Google Play</string>
    <string name="rate_dialog_feedback_title">Please, help me improve</string>
    <string name="rate_dialog_feedback_send">Send</string>
    <string name="rate_dialog_feedback_no">No, thanks</string>
    <string name="rate_dialog_feedback_thanks">Thanks! +10 XP Just kidding ;)</string>
    <string name="quest_saved">Quest saved</string>
    <string name="help_explain_screen">Know this screen</string>
    <string name="help_dialog_calendar_title">What is calendar all about?</string>
    <string name="help_dialog_overview_title">What is overview all about?</string>
    <string name="help_dialog_pick_daily_challenge_quests_title">Why to accept daily challenge?</string>
    <string name="help_dialog_inbox_title">What is my inbox for?</string>
    <string name="help_dialog_repeating_quests_title">What are my repeating quests?</string>
    <string name="help_dialog_ok">OK</string>
    <string name="help_dialog_more_help">More help</string>
    <string name="help_wanted_email_subject">Help wanted</string>
    <string name="help_wanted_chooser_title">Ask us for help</string>
    <string name="help_dialog_calendar_text1">Calendar is the place where you can control your daily schedule.</string>
    <string name="help_dialog_calendar_text2">Above the calendar is the area with your unscheduled quests for the day.</string>
    <string name="help_dialog_calendar_text3">In grey you can see where myPoli recommends to schedule them.</string>
    <string name="help_dialog_calendar_drag">Touch, hold and drag quest to schedule it</string>
    <string name="help_dialog_repeating_quests_text1">Repeating Quests are called all your repeating tasks.</string>
    <string name="help_dialog_repeating_quests_text2">myPoli automatically makes a quest in your calendar for the repeating one if you have to do it on a particular date.</string>
    <string name="help_dialog_repeating_quests_text3">From this screen you can track your weekly progress.</string>
    <string name="help_dialog_inbox_text1">This is the place with all your unscheduled quests.</string>
    <string name="help_dialog_inbox_text2">If you don\'t complete a quest during the day it will automatically move to your Inbox.</string>
    <string name="help_dialog_overview_text1">Use the overview to manage your uncompleted quests for the next 7 days.</string>
    <string name="help_dialog_rewards_title">Earn your rewards</string>
    <string name="help_dialog_rewards_text2">Reward can be anything. For example: \'Eat a chocolate\' or \'Go on a vacation\'.</string>
    <string name="help_dialog_rewards_text3">You choose how much it costs depending on your efforts.</string>
    <string name="drawer_close">Navigation Closed</string>
    <string name="drawer_open">Navigation Opened</string>
    <string name="drawer_repeating_quests">Repeating Quests</string>
    <string name="drawer_challenges">Challenges</string>
    <string name="growth">Growth</string>
    <string name="rewards">Rewards</string>
    <string name="title_fragment_challenges">Challenges</string>
    <string name="title_fragment_rewards">Rewards</string>
    <string name="title_activity_add_reward">Add Reward</string>
    <string name="reward_name_hint">Name (e.g. Eat a chocolate)</string>
    <string name="dialog_delete_reward_title">Delete reward</string>
    <string name="dialog_delete_reward_message">Sure you want to delete this awesome reward?</string>
    <string name="reward_deleted">Reward deleted</string>
    <string name="reward_activity_edit_title">Edit reward</string>
    <string name="reward_too_expensive">Too expensive. Go complete some quests!</string>
    <string name="level_up_title">You gained a new level</string>
    <string name="sweet">SWEET</string>
    <string name="level_up_message"><![CDATA[Good job! You are now at level <b>%d</b>! Keep up the good work!]]></string>
    <string name="empty_text_rewards">What a shame! No rewards here! Add one?</string>
    <string name="empty_overview_text">Your adventure is empty! Start it by adding a quest?</string>
    <string name="empty_inbox_text">Your inbox is empty</string>
    <string name="empty_repeating_quests_title">No Repeating Quests?</string>
    <string name="empty_repeating_quests_text">Schedule &amp; organize repeating tasks better with Repeating Quests. Start by creating your first one.</string>
    <string name="empty_challenges_title">Ready to achieve your goals?</string>
    <string name="empty_challenges_text">Organize projects &amp; achieve goals with Challenges. Create one, set a deadline and get it done!</string>
    <string name="empty_habits_title">Build Habits that stick!</string>
    <string name="empty_habits_text">Build good Habits or avoid bad ones. Create your first Habit now and start building your streak!</string>
    <string name="settings">Settings</string>
    <string name="snooze">Snooze</string>
    <string name="help_dialog_repeating_quest_text1">Check how you are doing with your repeating quest</string>
    <string name="help_dialog_repeating_quest_duration">How much time you\'ve spent on this quest</string>
    <string name="help_dialog_repeating_quest_next">When is the next quest</string>
    <string name="help_dialog_repeating_quest_streak">Streak counter. The higher your streak, the more XP and coins you will receive when completing the quest.</string>
    <string name="help_dialog_challenge_text1">Check your progress and how you are doing with your challenge.</string>
    <string name="help_dialog_challenge_text2">Track how many quests you\'ve completed and how many remain.</string>
    <string name="help_dialog_challenge_spent_time">How much time you\'ve spent on this challenge</string>
    <string name="help_dialog_challenge_next">When is the next quest for the challenge</string>
    <string name="help_dialog_challenge_due_date">Due date for the challenge</string>
    <string name="help_dialog_challenge_quest_list">List of remaining quests. Add more or swipe left to remove one.</string>
    <string name="calendar">Calendar</string>
    <string name="overview">Journey Ahead</string>
    <string name="do_today">Do today</string>
    <string name="duplicate">Duplicate</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="category_learning">Learning</string>
    <string name="category_wellness">Wellness</string>
    <string name="category_personal">Personal</string>
    <string name="category_work">Work</string>
    <string name="category_fun">Fun</string>
    <string name="category_chores">Chores</string>
    <string name="go_premium">Go premium</string>
    <string name="help_dialog_rewards_buy">Press the button to buy your reward. If the button is grey, work a little bit harder to earn these coins!</string>
    <string name="help_dialog_rewards_text1">Define your own rewards and buy them when you win enough coins by completing your quests.</string>
    <string name="yearly_plan">For the Smart Ones</string>
    <string name="achievement_feed">Achievement Feed</string>
    <string name="subscription_price_per_month">%s per month</string>
    <string name="enable_all_power_ups">Enable all power-ups</string>
    <string name="get_all_future_power_ups_for_free">Get all future power-ups for FREE</string>
    <string name="yearly_plan_benefit3">Smartest plan - billed yearly</string>
    <string name="current_plan">Current plan</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="remove">Remove</string>
    <string name="reminder">Reminder</string>
    <string name="date">Date</string>
    <string name="challenges">Challenges</string>
    <string name="tags">Tags</string>
</resources>