<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/quest_start"
        android:title="@string/start"
        android:visible="true"
        tools:showAsAction="withText" />

    <item
        android:id="@+id/complete_quest"
        android:title="@string/mark_as_done"
        android:visible="true"
        tools:showAsAction="withText" />

    <item
        android:id="@+id/schedule_quest"
        android:title="@string/do_today"
        android:visible="true"
        tools:showAsAction="withText" />

    <item
        android:id="@+id/quest_snooze"
        android:title="@string/snooze"
        android:visible="true"
        tools:showAsAction="withText" >
        <menu />
    </item>

    <item
        android:id="@+id/quest_duplicate"
        android:title="@string/duplicate"
        android:visible="true"
        tools:showAsAction="withText">
        <menu/>
    </item>

    <item
        android:id="@+id/edit_quest"
        android:title="@string/edit"
        android:visible="true"
        tools:showAsAction="withText" />

    <item
        android:id="@+id/delete_quest"
        android:title="@string/delete"
        android:visible="true"
        tools:showAsAction="withText" />
</menu>