<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chooseDate"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/date"
        app:showAsAction="always" />

    <item
        android:id="@+id/chooseReminder"
        android:icon="@drawable/ic_reminder_white_24dp"
        android:title="@string/reminder"
        app:showAsAction="always" />
    <item
        android:id="@+id/chooseIcon"
        android:icon="@drawable/ic_icon_white_24dp"
        android:title="@string/icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/chooseColor"
        android:icon="@drawable/ic_color_palette_white_24dp"
        android:title="@string/color"
        app:showAsAction="always" />

    <item
        android:id="@+id/removeEvent"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/remove"
        app:showAsAction="always" />
</menu>