<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filters_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/filter_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/category_learning" />

    <Switch
        android:id="@+id/filter_wellness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/category_wellness" />

    <Switch
        android:id="@+id/filter_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/category_personal" />

    <Switch
        android:id="@+id/filter_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/category_work" />

    <Switch
        android:id="@+id/filter_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/category_fun" />

    <Switch
        android:id="@+id/filter_chores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/category_chores" />
</LinearLayout>