<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/yearly_root_layout"
    style="@style/subscription_plan_card">

    <android.support.constraint.ConstraintLayout
        style="@style/match_parent">

        <TextView
            android:id="@+id/yearly_title"
            style="@style/subscription_plan_heading"
            android:text="@string/yearly_plan"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/yearly_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/yearly_image"
            style="@style/subscription_plan_recommended"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/subscriptions_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/benefit1"
            style="@style/subscription_price_list_item"
            android:drawableStart="@drawable/ic_done_green_24dp"
            android:text="@string/enable_all_power_ups"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/yearly_title"
            app:layout_constraintRight_toLeftOf="@+id/yearly_image"
            app:layout_constraintTop_toBottomOf="@+id/yearly_title" />

        <TextView
            android:id="@+id/benefit2"
            style="@style/subscription_price_list_item"
            android:drawableStart="@drawable/ic_done_green_24dp"
            android:text="@string/get_all_future_power_ups_for_free"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintLeft_toLeftOf="@+id/yearly_title"
            app:layout_constraintRight_toLeftOf="@+id/yearly_image"
            app:layout_constraintTop_toBottomOf="@+id/benefit1" />

        <TextView
            android:id="@+id/benefit3"
            style="@style/subscription_price_list_item"
            android:drawableStart="@drawable/ic_done_green_24dp"
            android:text="@string/yearly_plan_benefit3"
            app:layout_constraintLeft_toLeftOf="@+id/yearly_title"
            app:layout_constraintRight_toLeftOf="@+id/yearly_image"
            app:layout_constraintTop_toBottomOf="@+id/benefit2" />

        <TextView
            android:id="@+id/yearly_price"
            style="@style/subscription_plan_price"
            android:text="@string/subscription_price_per_month"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/benefit3" />

        <Button
            android:id="@+id/yearly_buy"
            style="@style/subscription_plan_button"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/go_premium"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearly_price"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/yearly_current_plan"
            style="@style/subscription_curent_plan"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGreen"
            android:text="@string/current_plan"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yearly_price"
            app:layout_constraintVertical_bias="0.5" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>